# svm

svmcpu/: CMakeLists.txt  README.md  config.ini  configuration.cpp  dataset.cpp  evaluate.cpp  process_data.cpp  svm.h  training.cpp
svmgpu/: CMakeLists.txt  README.md  configuration.h  dataset.h  evaluate.cpp  process_data.cpp  sr_dataset.sh  svm.cpp  svm.cu  svm.h  training.cpp  utils.h
